src/test/resources/frontendReference/invalid/semanticErr/print/printTypeErr01.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 14:14 -- Incompatible type at y (expected: INT, actual: CHAR)
